// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferDetail should not render if not open 1`] = `<DocumentFragment />`;

exports[`TransferDetail should render a modal 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl p-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="no-ligatures css-1iw2tte"
              data-testid="TransactionSender"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 overflow-auto text-right md:text-left"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionRecipients"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Recipient
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 text-right md:text-left"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionAmount"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Amount
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="css-fbeerz"
                    color="danger"
                  >
                    <div
                      class="flex space-x-1 items-stretch"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        - 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="border-theme-danger-100 text-theme-danger-500 dark:border-theme-danger-400 dark:text-theme-danger-400 ring-theme-background duration-100 css-14jhlj1"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionFee"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionMemo"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Memo
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <p
                    class="whitespace-pre-line break-all"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center text-theme-secondary-900 dark:text-theme-secondary-600 md:px-3"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    file-lines.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionTimestamp"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
                  >
                    <div
                      class="text-theme-warning-300 css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg>
                        clock.svg
                      </svg>
                    </div>
                    <span>
                      Not yet confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex w-full items-center space-x-3 overflow-hidden"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex items-center css-15tcy38"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-1y2194z"
                        >
                          <span
                            class="css-0"
                            data-testid="TruncateMiddle"
                          >
                            ea63bf9a4b3eaf75a1dfff7219…7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg>
                            arrow-external.svg
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransferDetail should render as not is sent 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl p-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="no-ligatures css-1iw2tte"
              data-testid="TransactionSender"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 overflow-auto text-right md:text-left"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionRecipients"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Recipient
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 text-right md:text-left"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionAmount"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Amount
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="css-1vb1527"
                    color="success"
                  >
                    <div
                      class="flex space-x-1 items-stretch"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionFee"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionMemo"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Memo
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <p
                    class="whitespace-pre-line break-all"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center text-theme-secondary-900 dark:text-theme-secondary-600 md:px-3"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    file-lines.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionTimestamp"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
                  >
                    <div
                      class="text-theme-warning-300 css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg>
                        clock.svg
                      </svg>
                    </div>
                    <span>
                      Not yet confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex w-full items-center space-x-3 overflow-hidden"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex items-center css-15tcy38"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-1y2194z"
                        >
                          <span
                            class="css-0"
                            data-testid="TruncateMiddle"
                          >
                            ea63bf9a4b3eaf75a1dfff7219…7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg>
                            arrow-external.svg
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransferDetail should render with wallet alias 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl p-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="no-ligatures css-1iw2tte"
              data-testid="TransactionSender"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 overflow-auto text-right md:text-left"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionRecipients"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Recipient
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="w-0 flex-1 text-right md:text-left"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                    >
                      <span
                        class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionAmount"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Amount
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="css-1vb1527"
                    color="success"
                  >
                    <div
                      class="flex space-x-1 items-stretch"
                    >
                      <span
                        class="whitespace-nowrap"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-14jhlj1"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionFee"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionMemo"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Memo
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <p
                    class="whitespace-pre-line break-all"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center text-theme-secondary-900 dark:text-theme-secondary-600 md:px-3"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    file-lines.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionTimestamp"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex flex-row-reverse items-center gap-4 md:flex-row md:gap-2"
                  >
                    <div
                      class="text-theme-warning-300 css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg>
                        clock.svg
                      </svg>
                    </div>
                    <span>
                      Not yet confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="no-ligatures css-19rivvh"
              data-testid="TransactionDetail"
            >
              <div
                class="w-40 flex-1 space-y-2 whitespace-nowrap"
                data-testid="TransactionDetail--desktop"
              >
                <div
                  class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex w-full items-center space-x-3 overflow-hidden"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="ring-focus group inline-block flex items-center css-15tcy38"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="css-1y2194z"
                        >
                          <span
                            class="css-0"
                            data-testid="TruncateMiddle"
                          >
                            ea63bf9a4b3eaf75a1dfff7219…7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg>
                            arrow-external.svg
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="ring-focus relative focus:outline-none"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="css-v0ob3f"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
